// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FighterIcon renders with different color 1`] = `
<Styled(ItemExtra)
  position={0}
>
  <Styled(TextIcon)
    color="blue"
  />
</Styled(ItemExtra)>
`;

exports[`FighterIcon renders with different icon 1`] = `
<Styled(ItemExtra)
  position={0}
>
  <Styled(TextIcon)
    icon="shield"
  />
</Styled(ItemExtra)>
`;

exports[`FighterIcon renders with different number 1`] = `
<Styled(ItemExtra)
  position={0}
>
  <Styled(TextIcon)
    number={4}
  />
</Styled(ItemExtra)>
`;

exports[`FighterIcon renders with different position 1`] = `
<Styled(ItemExtra)
  position={1}
>
  <Styled(TextIcon) />
</Styled(ItemExtra)>
`;

exports[`FighterIcon renders with no props 1`] = `
<Styled(ItemExtra)
  position={0}
>
  <Styled(TextIcon) />
</Styled(ItemExtra)>
`;
